// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownToggle renders correctly when shouldNotWrap is set 1`] = `
<div
  className="wds-dropdown-level-2__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with Text inside 1`] = `
<div
  className="wds-dropdown__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    My toggle content
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with a component inside 1`] = `
<div
  className="wds-dropdown__toggle"
  onClick={[Function]}
  role="button"
>
  <div>
    My toggle content
  </div>
</div>
`;

exports[`DropdownToggle renders correctly with a function passed as toggle 1`] = `
<div
  className="wds-dropdown__toggle"
  onClick={[Function]}
  role="button"
>
  <div>
    My toggle content
    <div
      className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
    />
  </div>
</div>
`;

exports[`DropdownToggle renders correctly with additional attrs 1`] = `
<div
  attr1={true}
  className="wds-dropdown-level-2__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with additional classNames 1`] = `
<div
  className="wds-dropdown-level-2__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with default values 1`] = `
<div
  className="wds-dropdown__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with default values for level 2 1`] = `
<div
  className="wds-dropdown-level-2__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with dropdown-tiny icon 1`] = `
<div
  className="wds-dropdown__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
  />
</div>
`;

exports[`DropdownToggle renders correctly with href passed in attrs 1`] = `
<a
  className="wds-dropdown__toggle"
  href="#"
  onClick={[Function]}
  role="button"
>
  <span>
    My toggle content
  </span>
  <div
    className="wds-icon wds-icon-tiny wds-dropdown__toggle-chevron"
  />
</a>
`;

exports[`DropdownToggle renders correctly with more button icon 1`] = `
<div
  className="wds-dropdown__toggle"
  onClick={[Function]}
  role="button"
>
  <span>
    
  </span>
  <div
    className="wds-icon wds-icon-small wds-dropdown__toggle-chevron"
  />
</div>
`;
